<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/albumNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/album_name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <EditText
        android:id="@+id/date_picker_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/album_date"
        android:inputType="date"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <Button
        android:id="@+id/addPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_page"
        android:layout_below="@id/date_picker_actions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/saveAlbumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_album"
        android:layout_below="@id/addPageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
